# yandex-coderun-backend

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
average-in-window/: main.cpp
balls-and-baskets/: main.cpp
biggest-square/: main.cpp
combo/: main.cpp
combo/examples/in/: 0.txt
couple-of-letters/: main.cpp
create-cycle-2/: main.cpp
crystals/: main.cpp
crystals/examples/in/: 1.txt
cycle-creation/: main.cpp
divisors-number/: main.cpp
fair-division/: main.cpp
fair-division/examples/in/: 1.txt
four-points/: main.cpp
four-points/examples/in/: 0.txt
gcd/: main.cpp
gcd-2/: main.cpp
gcd-2/examples/in/: 0.txt
graph-degradation/: main.cpp
graph-degradation/examples/in/: 2.txt
guess-the-function/: main.cpp
intervals/: main.cpp
intervals/examples/in/: 1.txt
letters-pair-2/: main.cpp
letters-pair-2/examples/in/: 0.txt  1.txt
lucky-number/: main.cpp
mega-pizza/: main.cpp
mega-pizza/examples/in/: 1.txt
microwave/: main.cpp
nearest-bus-stop/: main.cpp
nested-cycles/: main.cpp
nested-cycles/examples/in/: 0.txt
paired-codes/: main.cpp
pizza-delivery/: main.cpp
queen-amount/: main.cpp
questions-about-maximum/: main.cpp
splitting-into-terms/: main.cpp  task.json
substitution-code/: main.cpp
substitution-code/examples/in/: 3.txt
super-marathon/: main.cpp
super-marathon/examples/in/: 1.txt
tableau/: main.cpp
tables/: main.cpp
team-contest/: main.cpp
tic-tac-toe/: main.cpp
tiles/: main.cpp
two-teams/: main.cpp
vacuum-cleaner/: main.cpp
work-schedule/: main.cpp
(+2 files in other folders)
